# flutterator

./: .gitignore  CHANGELOG.md  CURSOR_RULES_FEATURE.md  FLUTTERATOR_STRUTTURA.md  README.md  REPORT.md  ROADMAP.md  TEST_COVERAGE.md  build-standalone.sh  build.sh  flutter_cli.py  flutterator.code-workspace  flutterator.py  package-lock.json  pyproject.toml  requirements.txt  setup.py  update_references.py
.github/workflows/: build.yml  publish-pypi.yml
generators/: __init__.py  feature_generator.py  initializator.py  main.py
generators/assets/: __init__.py  assets.py  main.py
generators/config/: __init__.py  analisy_options.py  main.py  pubspec.py
generators/cursor/: __init__.py  setup.py
generators/helpers/: __init__.py  component.py  config.py  data_source.py  domain.py  feature.py  navigation.py  page.py  project.py  utils.py  validation.py
generators/static/assets/mock/: auth_user.json
generators/static/cursor/: AGENTS.md.jinja
generators/static/cursor/agents/: doc-writer.md  epic-orchestrator.md  feature-implementer.md  integration-wiring.md  layer-application.md  layer-guardian.md  layer-infrastructure.md  layer-model.md  layer-presentation.md  test-writer.md
generators/static/cursor/rules/: apis-layer.mdc.jinja  application-layer.mdc.jinja  architecture-core.mdc.jinja  dart-conventions.mdc.jinja  domain-layer.mdc.jinja  login-context.mdc.jinja  presentation-layer.mdc.jinja  quality-gate.mdc.jinja  ui-caravaggio.mdc.jinja
generators/static/cursor/test/: README.md
generators/static/templates/: injection_template.dart  injection_template.jinja  main_api_template.dart  main_template.dart  main_template.jinja  main_template_INACTIVE.dart  page_template.jinja  router_auth_template.dart  router_auth_template.jinja  router_template.dart  router_template.jinja
generators/static/templates/component/: component_bloc_template.jinja  component_event_template.jinja  component_form_bloc_template.jinja  component_form_event_template.jinja  component_form_state_template.jinja  component_form_widget_template.jinja  (+3 more)
generators/templates/: __init__.py  api.py  application.py  copier.py  core.py  infrastructure.py  main.py  model.py  presentation.py
generators/templates/_core/: core_generator.py
generators/templates/apis/: apis_generator.py
generators/templates/auth/: auth_generator.py  sign_in_form_generator.py
generators/templates/home/: home_generator.py
generators/templates/lib/: lib_generator.py
generators/templates/logging/: logging_generator.py
generators/templates/splash/: splash_generator.py
generators/templates/storage/: storage_generator.py
scripts/: bump_version.py
tests/: __init__.py  conftest.py  test_basic.py  test_cursor_setup.py  test_data_source.py  test_e2e_flutter.py  test_integration.py
vscode-extension/: CHANGELOG.md  LICENSE.md  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: domainModels.ts  extension.ts  flutterProject.ts  runFlutterator.ts
(+144 files in other folders)
