[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flutterator"
version = "0.1.0"
description = "Una CLI per generare progetti Flutter"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
authors = [
    { name="Lorenzo Busi", email="info@lorenzobusi.it" }
]
dependencies = ["click"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
flutterator = "flutterator:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
