[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flutterator"
version = "3.0.2"
description = "A CLI to generate Flutter projects with DDD architecture"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
authors = [
    { name="Lorenzo Busi", email="info@lorenzobusi.it" }
]
dependencies = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
flutterator = "flutterator:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
